--- a/src/Azure/Storage.Net.Microsoft.Azure.Storage/Storage.Net.Microsoft.Azure.Storage.csproj
+++ b/src/Azure/Storage.Net.Microsoft.Azure.Storage/Storage.Net.Microsoft.Azure.Storage.csproj
@@ -1,43 +1,47 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <TargetFrameworks>netstandard2.0</TargetFrameworks>
-    <Copyright>Copyright (c) 2015-2017 by Ivan Gavryliuk</Copyright>
-    <AssemblyTitle>Storage.Net.Microsoft.Azure.Storage</AssemblyTitle>
-    <Authors>Ivan Gavryliuk (@aloneguid)</Authors>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <AssemblyOriginatorKeyFile>../../storage.snk</AssemblyOriginatorKeyFile>
-    <SignAssembly>true</SignAssembly>
-    <PackageId>Storage.Net.Microsoft.Azure.Storage</PackageId>
-    <PackageIconUrl>http://i.isolineltd.com/nuget/storage.png</PackageIconUrl>
-     <PackageProjectUrl>https://github.com/aloneguid/storage</PackageProjectUrl>
-    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
-    <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
-    <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
-    <Version>1.0.0</Version>
-    <FileVersion>1.0.0.0</FileVersion>
-    <AssemblyVersion>1.0.0.0</AssemblyVersion>
-    <RepositoryUrl>https://github.com/aloneguid/storage</RepositoryUrl>
-    <PackageLicenseUrl>https://github.com/aloneguid/storage/blob/master/LICENSE</PackageLicenseUrl>
-    <RepositoryType>GitHub</RepositoryType>
-    <Description>Extension to Storage.Net providing integration with Microsoft Azure Storage for blobs, tables and queues.</Description>
-    <PackageReleaseNotes>v5.8.1
-new feature: Azure Blob Storage supports connection by container SAS URI</PackageReleaseNotes>
-     <LangVersion>latest</LangVersion>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)' == 'Release'">
-    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-  </PropertyGroup>
-  <ItemGroup>
-    <Compile Include="..\..\JsonExtensions.cs" Link="JsonExtensions.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
-    <PackageReference Include="System.ValueTuple" Version="4.5.0" />
-     
-    <PackageReference Include="Microsoft.Azure.Storage.Blob" Version="10.0.3" />
-     <PackageReference Include="Microsoft.Azure.Storage.Queue" Version="10.0.3" />
-     <PackageReference Include="Microsoft.Azure.Storage.File" Version="10.0.3" />
-  </ItemGroup>
+   <PropertyGroup>
+      <TargetFrameworks>netstandard2.0</TargetFrameworks>
+      <Copyright>Copyright (c) 2015-2017 by Ivan Gavryliuk</Copyright>
+      <AssemblyTitle>Storage.Net.Microsoft.Azure.Storage</AssemblyTitle>
+      <Authors>Ivan Gavryliuk (@aloneguid)</Authors>
+      <GenerateDocumentationFile>true</GenerateDocumentationFile>
+      <AssemblyOriginatorKeyFile>../../storage.snk</AssemblyOriginatorKeyFile>
+      <SignAssembly>true</SignAssembly>
+      <PackageId>Storage.Net.Microsoft.Azure.Storage</PackageId>
+      <PackageIconUrl>http://i.isolineltd.com/nuget/storage.png</PackageIconUrl>
+      <PackageProjectUrl>https://github.com/aloneguid/storage</PackageProjectUrl>
+      <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
+      <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
+      <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
+      <Version>1.0.0</Version>
+      <FileVersion>1.0.0.0</FileVersion>
+      <AssemblyVersion>1.0.0.0</AssemblyVersion>
+      <RepositoryUrl>https://github.com/aloneguid/storage</RepositoryUrl>
+      <PackageLicenseUrl>https://github.com/aloneguid/storage/blob/master/LICENSE</PackageLicenseUrl>
+      <RepositoryType>GitHub</RepositoryType>
+      <Description>Extension to Storage.Net providing integration with Microsoft Azure Storage for blobs, tables and queues.</Description>
+      <PackageReleaseNotes>
+         v5.8.1
+         new feature: Azure Blob Storage supports connection by container SAS URI
+      </PackageReleaseNotes>
+      <LangVersion>latest</LangVersion>
+      <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+      <WarningsAsErrors />
+   </PropertyGroup>
+   <PropertyGroup Condition="'$(Configuration)' == 'Release'">
+      <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+   </PropertyGroup>
+   <ItemGroup>
+      <Compile Include="..\..\JsonExtensions.cs" Link="JsonExtensions.cs" />
+   </ItemGroup>
+   <ItemGroup>
+      <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+      <PackageReference Include="System.ValueTuple" Version="4.5.0" />
+
+      <PackageReference Include="Microsoft.Azure.Storage.Blob" Version="10.0.3" />
+      <PackageReference Include="Microsoft.Azure.Storage.Queue" Version="10.0.3" />
+      <PackageReference Include="Microsoft.Azure.Storage.File" Version="10.0.3" />
+   </ItemGroup>
    <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
       <!-- this is only available for .net standard 2.0 -->
       <PackageReference Include="Microsoft.Azure.Cosmos.Table" Version="1.0.1" />
@@ -46,6 +50,6 @@ new feature: Azure Blob Storage supports connection by container SAS URI</Packag
       <DefineConstants>NETSTANDARD20</DefineConstants>
    </PropertyGroup>
    <ItemGroup>
-    <ProjectReference Include="..\..\Storage.Net\Storage.Net.csproj" />
-  </ItemGroup>
+      <ProjectReference Include="..\..\Storage.Net\Storage.Net.csproj" />
+   </ItemGroup>
 </Project>
