--- a/src/AWS/Storage.Net.Amazon.Aws/Storage.Net.Amazon.Aws.csproj
+++ b/src/AWS/Storage.Net.Amazon.Aws/Storage.Net.Amazon.Aws.csproj
@@ -1,37 +1,39 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <Copyright>Copyright (c) 2015-2017 by Ivan Gavryliuk</Copyright>
-    <AssemblyTitle>Storage.Net.Amazon.Aws</AssemblyTitle>
-    <TargetFrameworks>netstandard1.6</TargetFrameworks>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <AssemblyName>Storage.Net.Amazon.Aws</AssemblyName>
-    <AssemblyOriginatorKeyFile>../../storage.snk</AssemblyOriginatorKeyFile>
-    <SignAssembly>true</SignAssembly>
-    <PackageId>Storage.Net.Amazon.Aws</PackageId>
-    <PackageIconUrl>http://i.isolineltd.com/nuget/storage.png</PackageIconUrl>
-    <PackageProjectUrl>https://github.com/aloneguid/storage</PackageProjectUrl>
-    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
-    <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
-    <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
-    <Version>4.0.0</Version>
-    <FileVersion>4.0.0.0</FileVersion>
-    <AssemblyVersion>4.0.0.0</AssemblyVersion>
-    <RepositoryUrl>https://github.com/aloneguid/storage</RepositoryUrl>
-    <Authors>Ivan Gavryliuk (@aloneguid)</Authors>
-    <PackageLicenseUrl>https://github.com/aloneguid/storage/blob/master/LICENSE</PackageLicenseUrl>
-    <RepositoryType>GitHub</RepositoryType>
-    <Description>Extension to Storage.Net providing integration with Amazon S3 blobs.</Description>
-     <LangVersion>latest</LangVersion>
-  </PropertyGroup>
+   <PropertyGroup>
+      <Copyright>Copyright (c) 2015-2017 by Ivan Gavryliuk</Copyright>
+      <AssemblyTitle>Storage.Net.Amazon.Aws</AssemblyTitle>
+      <TargetFrameworks>netstandard1.6</TargetFrameworks>
+      <GenerateDocumentationFile>true</GenerateDocumentationFile>
+      <AssemblyName>Storage.Net.Amazon.Aws</AssemblyName>
+      <AssemblyOriginatorKeyFile>../../storage.snk</AssemblyOriginatorKeyFile>
+      <SignAssembly>true</SignAssembly>
+      <PackageId>Storage.Net.Amazon.Aws</PackageId>
+      <PackageIconUrl>http://i.isolineltd.com/nuget/storage.png</PackageIconUrl>
+      <PackageProjectUrl>https://github.com/aloneguid/storage</PackageProjectUrl>
+      <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
+      <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
+      <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
+      <Version>4.0.0</Version>
+      <FileVersion>4.0.0.0</FileVersion>
+      <AssemblyVersion>4.0.0.0</AssemblyVersion>
+      <RepositoryUrl>https://github.com/aloneguid/storage</RepositoryUrl>
+      <Authors>Ivan Gavryliuk (@aloneguid)</Authors>
+      <PackageLicenseUrl>https://github.com/aloneguid/storage/blob/master/LICENSE</PackageLicenseUrl>
+      <RepositoryType>GitHub</RepositoryType>
+      <Description>Extension to Storage.Net providing integration with Amazon S3 blobs.</Description>
+      <LangVersion>latest</LangVersion>
+      <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+      <WarningsAsErrors />
+   </PropertyGroup>
    <PropertyGroup Condition="'$(Configuration)' == 'Release'">
-    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-  </PropertyGroup>
+      <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+   </PropertyGroup>
    <ItemGroup>
       <PackageReference Include="AWSSDK.Core" Version="3.3.102.3" />
       <PackageReference Include="AWSSDK.S3" Version="3.3.102.12" />
       <PackageReference Include="AWSSDK.SQS" Version="3.3.100.31" />
    </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Storage.Net\Storage.Net.csproj" />
-  </ItemGroup>
+   <ItemGroup>
+      <ProjectReference Include="..\..\Storage.Net\Storage.Net.csproj" />
+   </ItemGroup>
 </Project>
