--- a/test/Storage.Net.Tests/Storage.Net.Tests.csproj
+++ b/test/Storage.Net.Tests/Storage.Net.Tests.csproj
@@ -1,40 +1,42 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
-    <VersionPrefix>3.5.0-alpha-4</VersionPrefix>
-    <AssemblyName>Storage.Net.Tests</AssemblyName>
-    <AssemblyOriginatorKeyFile>../../src/storage.snk</AssemblyOriginatorKeyFile>
-    <SignAssembly>true</SignAssembly>
-    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
-    <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
-    <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
-     <LangVersion>latest</LangVersion>
-  </PropertyGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\src\Azure\Storage.Net.Microsoft.Azure.Storage\Storage.Net.Microsoft.Azure.Storage.csproj" />
-    <ProjectReference Include="..\..\src\Storage.Net\Storage.Net.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="LogMagic" Version="2.17.5" />
-    <PackageReference Include="Config.Net" Version="4.13.2" />
-    <PackageReference Include="Moq" Version="4.10.1" />
-    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
-    <PackageReference Include="xunit" Version="2.4.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-     <PackageReference Include="coverlet.msbuild" Version="2.6.2">
-        <PrivateAssets>all</PrivateAssets>
-        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-     </PackageReference>
-     <Reference Include="System" />
-    <Reference Include="Microsoft.CSharp" />
-  </ItemGroup>
-  <ItemGroup>
-    <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Blobs\" />
-  </ItemGroup>
+   <PropertyGroup>
+      <TargetFramework>netcoreapp2.1</TargetFramework>
+      <VersionPrefix>3.5.0-alpha-4</VersionPrefix>
+      <AssemblyName>Storage.Net.Tests</AssemblyName>
+      <AssemblyOriginatorKeyFile>../../src/storage.snk</AssemblyOriginatorKeyFile>
+      <SignAssembly>true</SignAssembly>
+      <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
+      <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
+      <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
+      <LangVersion>latest</LangVersion>
+      <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+      <WarningsAsErrors />
+   </PropertyGroup>
+   <ItemGroup>
+      <ProjectReference Include="..\..\src\Azure\Storage.Net.Microsoft.Azure.Storage\Storage.Net.Microsoft.Azure.Storage.csproj" />
+      <ProjectReference Include="..\..\src\Storage.Net\Storage.Net.csproj" />
+   </ItemGroup>
+   <ItemGroup>
+      <PackageReference Include="LogMagic" Version="2.17.5" />
+      <PackageReference Include="Config.Net" Version="4.13.2" />
+      <PackageReference Include="Moq" Version="4.10.1" />
+      <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+      <PackageReference Include="xunit" Version="2.4.1" />
+      <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
+         <PrivateAssets>all</PrivateAssets>
+         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="coverlet.msbuild" Version="2.6.2">
+         <PrivateAssets>all</PrivateAssets>
+         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <Reference Include="System" />
+      <Reference Include="Microsoft.CSharp" />
+   </ItemGroup>
+   <ItemGroup>
+      <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
+   </ItemGroup>
+   <ItemGroup>
+      <Folder Include="Blobs\" />
+   </ItemGroup>
 </Project>
