--- a/src/AWS/Storage.Net.Amazon.Aws/Storage.Net.Amazon.Aws.csproj
+++ b/src/AWS/Storage.Net.Amazon.Aws/Storage.Net.Amazon.Aws.csproj
@@ -2,7 +2,7 @@
    <PropertyGroup>
       <Copyright>Copyright (c) 2015-2017 by Ivan Gavryliuk</Copyright>
       <AssemblyTitle>Storage.Net.Amazon.Aws</AssemblyTitle>
-      <TargetFrameworks>netstandard1.6</TargetFrameworks>
+      <TargetFrameworks>netstandard1.6;netstandard2.0</TargetFrameworks>
       <GenerateDocumentationFile>true</GenerateDocumentationFile>
       <AssemblyName>Storage.Net.Amazon.Aws</AssemblyName>
       <AssemblyOriginatorKeyFile>../../storage.snk</AssemblyOriginatorKeyFile>
