--- a/src/Azure/Storage.Net.Microsoft.Azure.KeyVault/Storage.Net.Microsoft.Azure.KeyVault.csproj
+++ b/src/Azure/Storage.Net.Microsoft.Azure.KeyVault/Storage.Net.Microsoft.Azure.KeyVault.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
    <PropertyGroup>
-      <TargetFrameworks>netstandard1.6</TargetFrameworks>
+      <TargetFrameworks>netstandard1.6;netstandard2.0</TargetFrameworks>
       <Description>Extension to Storage.Net providing integration with Microsoft Azure Key vault as a blob storage.</Description>
       <AssemblyOriginatorKeyFile>../../storage.snk</AssemblyOriginatorKeyFile>
       <SignAssembly>true</SignAssembly>
