--- a/src/Storage.Net/Storage.Net.csproj
+++ b/src/Storage.Net/Storage.Net.csproj
@@ -3,7 +3,7 @@
       <Copyright>Copyright (c) 2015-2017 by Ivan Gavryliuk</Copyright>
       <AssemblyTitle>Storage.Net</AssemblyTitle>
       <Authors>Ivan Gavryliuk (@aloneguid)</Authors>
-      <TargetFrameworks>netstandard1.6</TargetFrameworks>
+      <TargetFrameworks>netstandard1.6;netstandard2.0</TargetFrameworks>
       <GenerateDocumentationFile>true</GenerateDocumentationFile>
       <AssemblyName>Storage.Net</AssemblyName>
       <AssemblyOriginatorKeyFile>../storage.snk</AssemblyOriginatorKeyFile>
