Azure Blobs + improments - Azure blobs' Blob that represents a container now has an extra property "IsContainer"="True" - Blob Metadata and Properties are created by default (as opposed to null) and keys are case insensitive - try to run az pipelines with integration stage

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -75,7 +75,32 @@ stages:
       inputs:
         ArtifactName: nuget
 
+- stage: Test
+  dependsOn: []
+  jobs:
+  - job: Platform
+    displayName: 'Tests'
+    strategy:
+      matrix:
+        Windows:
+           image: 'windows-2019'
+        Linux:
+           image: 'ubuntu-16.04'
+        MacOSX:
+           image: 'macOS-10.14'
+    pool:
+      vmImage: $(image)
+    steps:
+    - task: DotNetCoreCLI@2
+      displayName: 'run tests'
+      inputs:
+        command: test
+        projects: test/Storage.Net.Tests.Integration/Storage.Net.Tests.Integration.csproj
+        arguments: '--filter Category=Blobs'
+
+
 - stage: Deploy
+  dependsOn: ['Build', 'Test'] 
   #condition: "eq(variables['Build.SourceBranch'], 'refs/heads/master')"
   condition: "and( or( eq(variables['Build.SourceBranch'], 'refs/heads/master'), eq(variables['Build.SourceBranch'], 'refs/heads/v7') ), succeeded('Build') )"
   jobs:
