--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -89,7 +89,7 @@ stages:
       inputs:
         command: test
         projects: test/Storage.Net.Tests.Integration/Storage.Net.Tests.Integration.csproj
-        arguments: '--filter Category=Blobs'
+        arguments: '-c release --filter Category=Blobs'
 
 
 - stage: Deploy
