--- a/src/AWS/Storage.Net.Amazon.Aws/Storage.Net.Amazon.Aws.csproj
+++ b/src/AWS/Storage.Net.Amazon.Aws/Storage.Net.Amazon.Aws.csproj
@@ -31,6 +31,7 @@
    <ItemGroup>
       <PackageReference Include="AWSSDK.Core" Version="3.3.103.15" />
       <PackageReference Include="AWSSDK.S3" Version="3.3.104.3" />
+      <PackageReference Include="AWSSDK.SecurityToken" Version="3.3.102" />
       <PackageReference Include="AWSSDK.SQS" Version="3.3.100.51" />
    </ItemGroup>
    <ItemGroup>
