--- a/src/Azure/Storage.Net.Microsoft.Azure.DataLake.Store/Storage.Net.Microsoft.Azure.DataLake.Store.csproj
+++ b/src/Azure/Storage.Net.Microsoft.Azure.DataLake.Store/Storage.Net.Microsoft.Azure.DataLake.Store.csproj
@@ -23,6 +23,7 @@
    </PropertyGroup>
    <ItemGroup>
       <PackageReference Include="Microsoft.Azure.DataLake.Store" Version="1.1.17" />
+      <PackageReference Include="Microsoft.Azure.Services.AppAuthentication" Version="1.3.0" />
       <PackageReference Include="Microsoft.Rest.ClientRuntime.Azure.Authentication" Version="2.4.0" />
       <PackageReference Include="NetBox" Version="2.3.5" />
       <PackageReference Include="System.Net.Http" Version="4.3.4" />
