--- a/src/Azure/Storage.Net.Microsoft.Azure.DataLake.Store/Storage.Net.Microsoft.Azure.DataLake.Store.csproj
+++ b/src/Azure/Storage.Net.Microsoft.Azure.DataLake.Store/Storage.Net.Microsoft.Azure.DataLake.Store.csproj
@@ -1,8 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
    <PropertyGroup>
-      <TargetFrameworks>netstandard1.6;netstandard2.0</TargetFrameworks>
-      <AssemblyOriginatorKeyFile>../../storage.snk</AssemblyOriginatorKeyFile>
-      <SignAssembly>true</SignAssembly>
+      <TargetFrameworks>netstandard2.0</TargetFrameworks>
+      <GenerateDocumentationFile>true</GenerateDocumentationFile>
       <RepositoryUrl>https://github.com/aloneguid/storage</RepositoryUrl>
       <RepositoryType>GitHub</RepositoryType>
       <Version>1.0.0</Version>
@@ -26,6 +25,7 @@
       <PackageReference Include="Microsoft.Azure.Services.AppAuthentication" Version="1.3.0" />
       <PackageReference Include="Microsoft.Rest.ClientRuntime.Azure.Authentication" Version="2.4.0" />
       <PackageReference Include="NetBox" Version="2.3.5" />
+      <PackageReference Include="Refit" Version="4.7.9" />
       <PackageReference Include="System.Net.Http" Version="4.3.4" />
    </ItemGroup>
    <ItemGroup>
