--- a/src/General/Storage.Net.Ftp/Storage.Net.Ftp.csproj
+++ b/src/General/Storage.Net.Ftp/Storage.Net.Ftp.csproj
@@ -5,6 +5,7 @@
       <LangVersion>latest</LangVersion>
       <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
       <WarningsAsErrors />
+      <Description>FTP bindings for Storage.Net</Description>
    </PropertyGroup>
 
    <ItemGroup>
