--- a/src/Azure/Storage.Net.Microsoft.Azure.ServiceBus/Storage.Net.Microsoft.Azure.ServiceBus.csproj
+++ b/src/Azure/Storage.Net.Microsoft.Azure.ServiceBus/Storage.Net.Microsoft.Azure.ServiceBus.csproj
@@ -26,7 +26,8 @@
       <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
    </PropertyGroup>
    <ItemGroup>
-      <PackageReference Include="Microsoft.Azure.ServiceBus" Version="3.4.0" />
+      <PackageReference Include="Microsoft.Azure.Management.ServiceBus" Version="2.1.0" />
+      <PackageReference Include="Microsoft.Azure.ServiceBus" Version="4.0.0" />
    </ItemGroup>
    <ItemGroup>
       <ProjectReference Include="..\..\Storage.Net\Storage.Net.csproj" />
