--- a/src/Azure/Storage.Net.Microsoft.Azure.KeyVault/Storage.Net.Microsoft.Azure.KeyVault.csproj
+++ b/src/Azure/Storage.Net.Microsoft.Azure.KeyVault/Storage.Net.Microsoft.Azure.KeyVault.csproj
@@ -21,6 +21,7 @@
    </PropertyGroup>
    <ItemGroup>
       <PackageReference Include="Microsoft.Azure.KeyVault" Version="3.0.4" />
+      <PackageReference Include="Microsoft.Azure.Services.AppAuthentication" Version="1.0.3" />
       <PackageReference Include="System.Net.Http" Version="4.3.4" />
       <PackageReference Include="NetBox" Version="2.3.5" />
       <PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="3.19.8" />
