--- a/src/AWS/Storage.Net.Amazon.Aws/Storage.Net.Amazon.Aws.csproj
+++ b/src/AWS/Storage.Net.Amazon.Aws/Storage.Net.Amazon.Aws.csproj
@@ -26,6 +26,9 @@
    <PropertyGroup Condition="'$(Configuration)' == 'Release'">
       <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
    </PropertyGroup>
+   <PropertyGroup Condition="'$(TargetFramework)' == 'netstandard1.6'">
+      <DefineConstants>NET16</DefineConstants>
+   </PropertyGroup>
    <ItemGroup>
       <PackageReference Include="AWSSDK.Core" Version="3.3.103.20" />
       <PackageReference Include="AWSSDK.S3" Version="3.3.104.8" />
