--- a/src/Azure/Storage.Net.Microsoft.Azure.Databricks.Dbfs/Storage.Net.Microsoft.Azure.Databricks.Dbfs.csproj
+++ b/src/Azure/Storage.Net.Microsoft.Azure.Databricks.Dbfs/Storage.Net.Microsoft.Azure.Databricks.Dbfs.csproj
@@ -6,6 +6,7 @@
      <LangVersion>latest</LangVersion>
      <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
      <WarningsAsErrors />
+     <Description>Extension to Storage.Net that provides a read-only filesystem access to Azure Databricks.</Description>
   </PropertyGroup>
 
    <PropertyGroup Condition="'$(Configuration)' == 'Release'">
