simplifying project names

--- a/src/Azure/Storage.Net.Microsoft.Azure.Storage.Blobs/Blobs.csproj
+++ b/src/Azure/Storage.Net.Microsoft.Azure.Storage.Blobs/Blobs.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
      <LangVersion>latest</LangVersion>
+     <PackageId>Storage.Net.Microsoft.Azure.Storage.Blobs</PackageId>
   </PropertyGroup>
 
   <ItemGroup>
