--- a/test/Storage.Net.Tests/Storage.Net.Tests.csproj
+++ b/test/Storage.Net.Tests/Storage.Net.Tests.csproj
@@ -11,8 +11,8 @@
       <WarningsAsErrors />
    </PropertyGroup>
    <ItemGroup>
-      <ProjectReference Include="..\..\src\Azure\Storage.Net.Microsoft.Azure.DataLake.Store\Storage.Net.Microsoft.Azure.DataLake.Store.csproj" />
-      <ProjectReference Include="..\..\src\Azure\Storage.Net.Microsoft.Azure.Storage\Storage.Net.Microsoft.Azure.Storage.csproj" />
+      <ProjectReference Include="..\..\src\Azure\Storage.Net.Microsoft.Azure.DataLake.Store\DataLakeGen1.csproj" />
+      <ProjectReference Include="..\..\src\Azure\Storage.Net.Microsoft.Azure.Storage\LegacyStorage.csproj" />
       <ProjectReference Include="..\..\src\Storage.Net\Storage.Net.csproj" />
    </ItemGroup>
    <ItemGroup>
