screwed up package ids

--- a/src/Azure/Storage.Net.Microsoft.Azure.KeyVault/KeyVault.csproj
+++ b/src/Azure/Storage.Net.Microsoft.Azure.KeyVault/KeyVault.csproj
@@ -15,6 +15,7 @@
       <LangVersion>latest</LangVersion>
       <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
       <WarningsAsErrors />
+      <PackageId>Storage.Net.Microsoft.Azure.KeyVault</PackageId>
    </PropertyGroup>
    <PropertyGroup Condition="'$(Configuration)' == 'Release'">
       <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
