--- a/src/Azure/Storage.Net.Microsoft.Azure.Databricks.Dbfs/Databricks.Dbfs.csproj
+++ b/src/Azure/Storage.Net.Microsoft.Azure.Databricks.Dbfs/Databricks.Dbfs.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+     <PackageId>Storage.Net.Microsoft.Azure.Databricks.Dbfs</PackageId>
      <GenerateDocumentationFile>true</GenerateDocumentationFile>
      <LangVersion>latest</LangVersion>
      <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
