--- a/src/Azure/Storage.Net.Microsoft.Azure.Storage.Blobs/Blobs.csproj
+++ b/src/Azure/Storage.Net.Microsoft.Azure.Storage.Blobs/Blobs.csproj
@@ -15,6 +15,7 @@
 
 
    <ItemGroup>
+    <PackageReference Include="Azure.Identity" Version="1.0.0" />
     <PackageReference Include="Azure.Storage.Blobs" Version="12.0.0" />
     <PackageReference Include="System.Text.Json" Version="4.6.0" />
   </ItemGroup>
