restored account sas and connection via sas

--- a/src/Azure/Storage.Net.Microsoft.Azure.Storage.Blobs/Blobs.csproj
+++ b/src/Azure/Storage.Net.Microsoft.Azure.Storage.Blobs/Blobs.csproj
@@ -7,6 +7,8 @@
      <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
      <WarningsAsErrors />
      <GenerateDocumentationFile>true</GenerateDocumentationFile>
+     <RootNamespace>Storage.Net.Microsoft.Azure.Storage.Blobs</RootNamespace>
+     <AssemblyName>Storage.Net.Microsoft.Azure.Storage.Blobs</AssemblyName>
   </PropertyGroup>
 
    <PropertyGroup Condition="'$(Configuration)' == 'Release'">
