--- a/src/Azure/Storage.Net.Microsoft.Azure.DataLake.Store/DataLakeGen1.csproj
+++ b/src/Azure/Storage.Net.Microsoft.Azure.DataLake.Store/DataLakeGen1.csproj
@@ -16,7 +16,9 @@
       <LangVersion>latest</LangVersion>
       <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
       <WarningsAsErrors />
-      <PackageId>Storage.Net.Microsoft.Azure.DataLake.Storage</PackageId>
+      <PackageId>Storage.Net.Microsoft.Azure.DataLake.Storage.Gen1</PackageId>
+      <AssemblyName>Storage.Net.Microsoft.Azure.DataLake.Storage.Gen1</AssemblyName>
+      <RootNamespace>Storage.Net.Microsoft.Azure.DataLake.Storage.Gen1</RootNamespace>
    </PropertyGroup>
    <PropertyGroup Condition="'$(Configuration)' == 'Release'">
       <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
@@ -26,7 +28,6 @@
       <PackageReference Include="Microsoft.Azure.Services.AppAuthentication" Version="1.3.1" />
       <PackageReference Include="Microsoft.Rest.ClientRuntime.Azure.Authentication" Version="2.4.0" />
       <PackageReference Include="NetBox" Version="2.3.5" />
-      <PackageReference Include="Refit" Version="4.7.51" />
       <PackageReference Include="System.Net.Http" Version="4.3.4" />
    </ItemGroup>
    <ItemGroup>
