--- a/src/Azure/Storage.Net.Microsoft.Azure.ServiceBus/ServiceBus.csproj
+++ b/src/Azure/Storage.Net.Microsoft.Azure.ServiceBus/ServiceBus.csproj
@@ -21,6 +21,8 @@
       <LangVersion>latest</LangVersion>
       <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
       <WarningsAsErrors />
+      <AssemblyName>Storage.Net.Microsoft.Azure.ServiceBus</AssemblyName>
+      <RootNamespace>Storage.Net.Microsoft.Azure.ServiceBus</RootNamespace>
    </PropertyGroup>
    <PropertyGroup Condition="'$(Configuration)' == 'Release'">
       <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
