udpating package descriptions

--- a/src/Azure/Storage.Net.Microsoft.Azure.DataLake.Store/DataLakeGen1.csproj
+++ b/src/Azure/Storage.Net.Microsoft.Azure.DataLake.Store/DataLakeGen1.csproj
@@ -12,7 +12,7 @@
       <PackageIconUrl>http://i.isolineltd.com/nuget/storage.png</PackageIconUrl>
       <PackageProjectUrl>https://github.com/aloneguid/storage</PackageProjectUrl>
       <Authors>Ivan Gavryliuk (@aloneguid)</Authors>
-      <Description>Provides Azure Data Lake Store integration for Storage.Net library. Supports both ADLS Gen 1 and Gen 2 accounts.</Description>
+      <Description>Provides Azure Data Lake Store integration for Storage.Net library. Supports only ADLS Gen 1. To use Gen 2, use Storage.Net.Microsoft.Azure.Storage.Blobs package.</Description>
       <LangVersion>latest</LangVersion>
       <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
       <WarningsAsErrors />
