--- a/src/Azure/Storage.Net.Microsoft.Azure.Storage.Files/Files.csproj
+++ b/src/Azure/Storage.Net.Microsoft.Azure.Storage.Files/Files.csproj
@@ -8,6 +8,7 @@
      <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
      <WarningsAsErrors />
      <GenerateDocumentationFile>true</GenerateDocumentationFile>
+     <Description>Azure Storage Files support in Storage.Net.</Description>
   </PropertyGroup>
 
    <PropertyGroup Condition="'$(Configuration)' == 'Release'">
