--- a/src/Azure/Storage.Net.Microsoft.Azure.KeyVault/KeyVault.csproj
+++ b/src/Azure/Storage.Net.Microsoft.Azure.KeyVault/KeyVault.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
    <PropertyGroup>
-      <TargetFrameworks>netstandard1.6;netstandard2.0</TargetFrameworks>
+      <TargetFrameworks>netstandard2.0</TargetFrameworks>
       <Description>Extension to Storage.Net providing integration with Microsoft Azure Key vault as a blob storage.</Description>
       <Version>1.0.0-alpha-0</Version>
       <FileVersion>1.0.0.0</FileVersion>
@@ -18,16 +18,14 @@
       <PackageId>Storage.Net.Microsoft.Azure.KeyVault</PackageId>
       <AssemblyName>Storage.Net.Microsoft.Azure.KeyVault</AssemblyName>
       <RootNamespace>Storage.Net.Microsoft.Azure.KeyVault</RootNamespace>
+      <LangVersion>latest</LangVersion>
    </PropertyGroup>
    <PropertyGroup Condition="'$(Configuration)' == 'Release'">
       <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
    </PropertyGroup>
    <ItemGroup>
-      <PackageReference Include="Microsoft.Azure.KeyVault" Version="3.0.4" />
-      <PackageReference Include="Microsoft.Azure.Services.AppAuthentication" Version="1.3.1" />
-      <PackageReference Include="System.Net.Http" Version="4.3.4" />
-      <PackageReference Include="NetBox" Version="2.3.5" />
-      <PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="5.2.3" />
+     <PackageReference Include="Azure.Identity" Version="1.0.0" />
+     <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.0.0" />
    </ItemGroup>
    <ItemGroup>
       <ProjectReference Include="..\..\Storage.Net\Storage.Net.csproj" />
