--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -111,7 +111,7 @@ stages:
     steps:
     - task: DotNetCoreCLI@2
       displayName: 'run tests'
-      continueOnError: true
+      continueOnError: false
       inputs:
         command: test
         projects: test/Storage.Net.Tests.Integration/Storage.Net.Tests.Integration.csproj
