--- a/src/AWS/Storage.Net.Amazon.Aws/Storage.Net.Amazon.Aws.csproj
+++ b/src/AWS/Storage.Net.Amazon.Aws/Storage.Net.Amazon.Aws.csproj
@@ -2,7 +2,7 @@
    <PropertyGroup>
       <Copyright>Copyright (c) 2015-2017 by Ivan Gavryliuk</Copyright>
       <AssemblyTitle>Storage.Net.Amazon.Aws</AssemblyTitle>
-      <TargetFrameworks>netstandard1.6;netstandard2.0</TargetFrameworks>
+      <TargetFrameworks>netstandard2.0</TargetFrameworks>
       <GenerateDocumentationFile>true</GenerateDocumentationFile>
       <AssemblyName>Storage.Net.Amazon.Aws</AssemblyName>
       <PackageId>Storage.Net.Amazon.Aws</PackageId>
@@ -25,9 +25,6 @@
    </PropertyGroup>
    <PropertyGroup Condition="'$(Configuration)' == 'Release'">
       <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-   </PropertyGroup>
-   <PropertyGroup Condition="'$(TargetFramework)' == 'netstandard1.6'">
-      <DefineConstants>NET16</DefineConstants>
    </PropertyGroup>
    <ItemGroup>
       <PackageReference Include="AWSSDK.Core" Version="3.3.103.20" />
