--- a/src/Storage.Net/Storage.Net.csproj
+++ b/src/Storage.Net/Storage.Net.csproj
@@ -23,8 +23,16 @@
    <PropertyGroup Condition="'$(Configuration)' == 'Release'">
       <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
    </PropertyGroup>
+   <PropertyGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+     <DefineConstants>JSON</DefineConstants>
+   </PropertyGroup>
    <ItemGroup>
       <PackageReference Include="NetBox" Version="2.3.5" />
       <PackageReference Include="System.Threading.Thread" Version="4.3.0" />
+   </ItemGroup>
+   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+     <PackageReference Include="System.Text.Json">
+       <Version>4.6.0</Version>
+     </PackageReference>
    </ItemGroup>
 </Project>
